--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,12 @@
 
 .burger-menu{
   display: none;
+  color: black;
+  border: 1px solid #1f1f1f;
+  padding: 10px;
+  border-radius: 5px;
+  width: 50px;
+  height: 50px;
 }
 
 .navbar .menu a {
